--- a/index.html
+++ b/index.html
@@ -21,11 +21,19 @@
             background-position: center;
             cursor: pointer;
         }
-        #userProfile {
+        #userProfile, #leaderboard {
             margin-top: 20px;
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
+            width: 300px;
+        }
+        #leaderboardList {
+            list-style-type: none;
+            padding: 0;
+        }
+        #leaderboardList li {
+            margin-bottom: 5px;
         }
     </style>
 </head>
@@ -40,9 +48,13 @@
         <p>Available Pats: <span id="availablePats">0</span></p>
         <p>Streak: <span id="userStreak">0</span> days</p>
     </div>
+    <div id="leaderboard">
+        <h3>Top Patters</h3>
+        <ol id="leaderboardList"></ol>
+    </div>
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
-        import { getDatabase, ref, onValue, set, get, increment, serverTimestamp, runTransaction } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-database.js";
+        import { getDatabase, ref, onValue, set, get, increment, serverTimestamp, runTransaction, query, orderByChild, limitToLast } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-database.js";
         import { getStorage, ref as storageRef, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-storage.js";
 
         const firebaseConfig = {
@@ -68,6 +80,7 @@
         const userNameElement = document.getElementById('userName');
         const availablePatsElement = document.getElementById('availablePats');
         const userStreakElement = document.getElementById('userStreak');
+        const leaderboardListElement = document.getElementById('leaderboardList');
 
         // Telegram WebApp initialization
         const tg = window.Telegram.WebApp;
@@ -133,6 +146,7 @@
                 // Update user data
                 await set(userRef, {
                     ...userData,
+                    name: userName,
                     streak: newStreak,
                     lastLogin: today,
                     availablePats: newAvailablePats
@@ -184,6 +198,35 @@
             userStreakElement.textContent = streak;
         }, error => console.error("Error in user streak listener:", error));
 
+        // Function to update leaderboard
+        function updateLeaderboard() {
+            const leaderboardRef = ref(db, 'users');
+            const leaderboardQuery = query(leaderboardRef, orderByChild('patCount'), limitToLast(5));
+
+            onValue(leaderboardQuery, (snapshot) => {
+                const leaderboardData = [];
+                snapshot.forEach((childSnapshot) => {
+                    leaderboardData.push({
+                        name: childSnapshot.val().name || 'Anonymous',
+                        patCount: childSnapshot.val().patCount || 0
+                    });
+                });
+
+                // Sort in descending order
+                leaderboardData.sort((a, b) => b.patCount - a.patCount);
+
+                // Update leaderboard UI
+                leaderboardListElement.innerHTML = '';
+                leaderboardData.forEach((user, index) => {
+                    const li = document.createElement('li');
+                    li.textContent = `${index + 1}. ${user.name}: ${user.patCount} pats`;
+                    leaderboardListElement.appendChild(li);
+                });
+            }, (error) => {
+                console.error("Error fetching leaderboard data:", error);
+            });
+        }
+
         // Increment counter
         catContainer.addEventListener('click', async () => {
             if (user) {
@@ -201,6 +244,7 @@
                         if (userData.availablePats > 0) {
                             userData.patCount = (userData.patCount || 0) + 1;
                             userData.availablePats--;
+                            userData.name = userName; // Ensure user's name is always up to date
                             return userData;
                         } else {
                             return undefined; // abort the transaction
@@ -245,6 +289,7 @@
                 await checkAndResetIfNeeded();
                 await checkAndUpdateDailyLogin();
                 updateCatImage();
+                updateLeaderboard(); // Initialize leaderboard
             } catch (error) {
                 console.error("Error during initialization:", error);
             }
