--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
         <ol id="leaderboardList"></ol>
     </div>
     <audio id="patSound" src="https://example.com/pat-sound.mp3" preload="auto"></audio>
-    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js" type="module"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database.js" type="module"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-storage.js" type="module"></script>
-    <script src="firebase-config.js" type="module"></script>
-    <script src="app.js" type="module"></script>
+    
+    <script type="module" src="app.js"></script>
 </body>
 </html>
