improve home page

--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
     <div id="content" class="flex-grow overflow-y-auto">
         <!-- Home Tab -->
         <div id="homeTab" class="tab-content">
-            <h1 class="text-4xl font-bold mb-4">Cat of Today</h1>
-            <h2 class="text-2xl mb-6">Global Pat Count: <span id="counter" class="text-blue-500">0</span></h2>
+            <h1 class="text-4xl font-bold mb-4 flex items-center justify-center">
+                <span class="mr-2">🐱</span>
+                <span>Cat of Today</span>
+                <span class="ml-2">🐾</span>
+            </h1>
+            <h2 class="text-2xl mb-6 bg-white bg-opacity-70 px-4 py-2 rounded-full inline-block">
+                Global Pat Count: <span id="counter" class="text-blue-500 font-bold">0</span>
+            </h2>
             <div id="catContainer" class="mb-6">
                 <div id="patMe" class="absolute bottom-4 left-1/2 transform -translate-x-1/2 bg-white bg-opacity-70 px-3 py-1 rounded-full text-sm">Pat me!</div>
             </div>
