--- a/index.html
+++ b/index.html
@@ -7,25 +7,27 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
 
 </head>
 <body class="flex flex-col min-h-screen pb-20">
     <div id="content" class="flex-grow overflow-y-auto">
         <!-- Home Tab -->
         <div id="homeTab" class="tab-content">
-            <h1 class="text-4xl font-bold mb-4 flex items-center justify-center">
+            <h1 class="title text-4xl font-bold mb-4 flex items-center justify-center">
                 <span class="mr-2">🐱</span>
                 <span>Cat of Today</span>
                 <span class="ml-2">🐾</span>
             </h1>
-            <h2 class="text-2xl mb-6 bg-white bg-opacity-70 px-4 py-2 rounded-full inline-block">
+            <h2 class="global-pat-count text-2xl mb-6 bg-white bg-opacity-70 px-4 py-2 rounded-full inline-block">
                 Global Pat Count: <span id="counter" class="text-blue-500 font-bold">0</span>
             </h2>
             <div id="catContainer" class="mb-6">
-                <div id="patMe" class="absolute bottom-4 left-1/2 transform -translate-x-1/2 bg-white bg-opacity-70 px-3 py-1 rounded-full text-sm">Pat me!</div>
+                <div id="patMe" class="absolute bottom-4 left-1/2 transform -translate-x-1/2 px-4 py-2 rounded-full text-sm flex items-center">
+                    <span class="mr-1">👋</span> Pat me!
+                </div>
             </div>
-            <div id="dailyFact" class="text-gray-600 italic mt-4">Did you know? Cats sleep for about 70% of their lives.</div>
+            <div id="dailyFact" class="daily-fact text-gray-600 italic mt-4">Did you know? Cats sleep for about 70% of their lives.</div>
         </div>
 
         <!-- Pats Tab -->
