--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
         <!-- Home Tab -->
         <div id="homeTab" class="tab-content">
             <h1 class="text-3xl font-bold mb-6 text-center pixel-font glow">Cat of Today</h1>
-            <div class="flex justify-between items-center mb-6">
-                <div class="global-pat-count">
-                    Global Pat Count: <span id="counter" class="text-blue-400 font-bold">347</span>
+            <div class="flex justify-center space-x-4 mb-6">
+                <div class="global-pat-count px-4 py-2 rounded-full bg-opacity-20 bg-white backdrop-filter backdrop-blur-sm">
+                    <span class="text-gray-300">Global Pat Count:</span>
+                    <span id="counter" class="text-blue-400 font-bold ml-2">378</span>
                 </div>
-                <div class="available-pats">
-                    Available Pats: <span id="availablePats" class="text-green-400 font-bold">10</span>
+                <div class="available-pats px-4 py-2 rounded-full bg-opacity-20 bg-white backdrop-filter backdrop-blur-sm">
+                    <span class="text-gray-300">Available Pats:</span>
+                    <span id="availablePats" class="text-green-400 font-bold ml-2">224</span>
                 </div>
             </div>
             <div id="catContainer" class="mb-6 relative">
