--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div id="catContainer" class="mb-6 relative">
-                <img src="cat-image.png" alt="Pixel Cat" class="w-full rounded-lg">
+                <img src="cat-image.png" alt="Cat of Today" class="w-full rounded-lg">
                 <button id="patMe" class="absolute bottom-4 left-1/2 transform -translate-x-1/2 bg-blue-500 text-white px-4 py-2 rounded-full text-sm flex items-center hover:bg-blue-600 transition-colors">
                     <span class="mr-1">👋</span> Pat me!
                 </button>
