improving home, adding loading page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
 </head>
 <body class="flex flex-col min-h-screen pb-20">
+    <div id="loadingOverlay" class="fixed inset-0 z-50 flex items-center justify-center bg-gray-900">
+        <div class="text-white text-2xl">Loading...</div>
+    </div>
     <div id="content" class="flex-grow overflow-y-auto">
         <!-- Home Tab -->
         <div id="homeTab" class="tab-content">
