fixing loading page

--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@
             <span>User</span>
         </button>
     </div>
+
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script type="module" src="app.js"></script>
+    <script>
+        console.log("HTML file loaded and executed.");
+    </script>
 </body>
 </html>
