--- a/index.html
+++ b/index.html
@@ -15,11 +15,54 @@
         #loadingOverlay.fade-out {
             opacity: 0;
         }
+        .cat-loader {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            border: 3px solid transparent;
+            border-top-color: #FF6B6B;
+            animation: spin 1s linear infinite;
+        }
+        .cat-loader::before, .cat-loader::after {
+            content: "";
+            position: absolute;
+            border-radius: 50%;
+            border: 3px solid transparent;
+        }
+        .cat-loader::before {
+            top: 5px;
+            left: 5px;
+            right: 5px;
+            bottom: 5px;
+            border-top-color: #4CAF50;
+            animation: spin 3s linear infinite;
+        }
+        .cat-loader::after {
+            top: 15px;
+            left: 15px;
+            right: 15px;
+            bottom: 15px;
+            border-top-color: #03A9F4;
+            animation: spin 1.5s linear infinite;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+        .cat-fact {
+            margin-top: 20px;
+            text-align: center;
+            font-style: italic;
+        }
     </style>
 </head>
 <body class="flex flex-col min-h-screen pb-20">
-    <div id="loadingOverlay" class="fixed inset-0 z-50 flex items-center justify-center bg-gray-900">
-        <div class="text-white text-2xl">Loading...</div>
+    <div id="loadingOverlay" class="fixed inset-0 z-50 flex flex-col items-center justify-center bg-gray-900">
+        <div class="cat-loader"></div>
+        <div class="text-white text-2xl mt-4">Warming up the cat...</div>
+        <div class="cat-fact text-white text-lg max-w-md px-4">
+            Did you know? Cats can make over 100 different sounds, while dogs can only make about 10.
+        </div>
     </div>
     <div id="content" class="flex-grow overflow-y-auto">
         <!-- Home Tab -->
